# DesignApproaches

./: basicdevice.hpp  device.hpp  extendeddevice.cpp  main.cpp
FactoryAndTemplate/: CMakeLists.txt  basicdevice.cpp  device.cpp  extendeddevice.hpp
